--- a/src/main/resources/com/example/eventratingapp/hello-view.fxml
+++ b/src/main/resources/com/example/eventratingapp/hello-view.fxml
@@ -17,6 +17,18 @@
       <VBox.margin>
          <Insets bottom="20.0" left="600.0" right="600.0" top="20.0" />
       </VBox.margin></VBox>
+   <HBox fx:id="AdminVbox" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+      <children>
+         <TextField fx:id="EventNameField" promptText="Название мероприятия" />
+         <TextField fx:id="EventPlaceField" promptText="Место проведения" />
+         <DatePicker fx:id="EventDateField" />
+         <TextArea fx:id="EventDescriptionField" prefHeight="200.0" prefWidth="200.0" promptText="Описание" />
+         <Button mnemonicParsing="false" onAction="#AddEvent" text="Добавить мероприятие" />
+      </children>
+      <VBox.margin>
+         <Insets />
+      </VBox.margin>
+   </HBox>
    <VBox fx:id="UserVbox" prefHeight="200.0" prefWidth="100.0">
       <children>
          <TableView fx:id="eventsView" prefHeight="200.0" prefWidth="200.0">
