--- a/src/main/resources/com/example/eventratingapp/hello-view.fxml
+++ b/src/main/resources/com/example/eventratingapp/hello-view.fxml
@@ -21,7 +21,7 @@
       <children>
          <TextField fx:id="EventNameField" promptText="Название мероприятия" />
          <TextField fx:id="EventPlaceField" promptText="Место проведения" />
-         <DatePicker fx:id="EventDateField" />
+         <DatePicker fx:id="EventDateField" promptText="Дата проведения" />
          <TextArea fx:id="EventDescriptionField" prefHeight="200.0" prefWidth="200.0" promptText="Описание" />
          <Button mnemonicParsing="false" onAction="#AddEvent" text="Добавить мероприятие" />
       </children>
@@ -40,5 +40,12 @@
                <TableColumn fx:id="columnEventRating" prefWidth="78.0" text="Рейтинг" />
            </columns>
          </TableView>
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+               <Label text="Выбранное мероприятие: " />
+               <Button mnemonicParsing="false" text="Оценить положительно" />
+               <Button mnemonicParsing="false" text="Оценить отрицательно" />
+            </children>
+         </HBox>
       </children></VBox>
 </VBox>
